--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
           <span class="navbar-brand mb-0 h1">Learn3Code</span>
         </div>
       </nav>
+      <h1>Test</h1>
 </body>
 </html>
