--- a/index.html
+++ b/index.html
@@ -9,12 +9,32 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 </head>
 <body>
     <nav class="navbar bg-light">
         <div class="container-fluid">
-          <span class="navbar-brand mb-0 h1">Learn3Code</span>
+          <span class="navbar-brand mb-0 h1"><img src="images/logo.png" width="150px" alt=""></span>
+          <ul class="nav justify-content-end">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
         </div>
-      </nav>
+    </nav>
+    <div class="container">
+       <div class="row">
+        <div class="col">
+            <h1>Learn to code for free.</h1>
+        </div>
+        <div class="col"><img src="" alt=""></div>
+       </div> 
+    </div>
 </body>
 </html>
