--- a/index.html
+++ b/index.html
@@ -28,5 +28,13 @@
           </ul>
         </div>
       </nav>
+      <div class="container">
+        <div class="row">
+         <div class="col">
+             <h1>Learn to code for free.</h1>
+         </div>
+         <div class="col"><img src="" alt=""></div>
+        </div> 
+     </div>
 </body>
 </html>
