--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar bg-light">
@@ -30,10 +31,10 @@
       </nav>
       <div class="container">
         <div class="row">
-         <div class="col">
+         <div class="col-6 text-center" style="margin-top: 200px;">
              <h1>Learn to code for free.</h1>
          </div>
-         <div class="col"><img src="" alt=""></div>
+         <div class="col text-center"><img src="images/website.png" width="90%" alt=""></div>
         </div> 
      </div>
 </body>
