--- a/index.html
+++ b/index.html
@@ -31,11 +31,19 @@
       </nav>
       <div class="container">
         <div class="row">
-         <div class="col-6 text-center" style="margin-top: 200px;">
-             <h1>Learn to code for free.</h1>
-         </div>
+         <div class="col-6 text-center" style="margin-top: 150px;">
+             <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif">Learn to code for free.</h1>
+             <h5 style="font-weight: 700; margin-top: 10px; margin-bottom: 40px;">Open source web developer site.</h5>
+             <button class="btn btn-primary">Learn from Basics</button>
+             <a href="#carrer-path" style="font-weight: 700; font-family: Arial, sans-serif; color: #5c5c5c; margin: 20px;">Don't know where to begin?</a>
+          </div>
          <div class="col text-center"><img src="images/website.png" width="90%" alt=""></div>
         </div> 
+     </div>
+     <div class="container">
+       <div id="carrer-path" class="carrer-path">
+
+       </div>
      </div>
 </body>
 </html>
