--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
              <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif">Learn to code for free.</h1>
              <h5 style="font-weight: 700; margin-top: 10px; margin-bottom: 40px;">Open source web developer site.</h5>
              <button class="btn btn-primary">Learn from Basics</button>
-             <a href="#carrer-path" style="font-weight: 700; font-family: Arial, sans-serif; color: #5c5c5c; margin: 20px;">Don't know where to begin?</a>
+             <a href="#carrer-path" class="link-carrier" >Don't know where to begin?</a>
           </div>
          <div class="col text-center"><img src="images/website.png" width="90%" alt=""></div>
         </div> 
