--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="row">
       <div class="col-6 text-center" style="margin-top: 150px">
         <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif">
-          Learn to code for free.
+          Free code Learning.
         </h1>
         <h5 style="font-weight: 700; margin-top: 10px; margin-bottom: 40px">
           Open source web developer site.
