--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="style.css" />
-  
+
 </head>
 
 <body>
@@ -35,6 +35,7 @@
       </ul>
     </div>
   </nav>
+
   <div class="container">
     <div class="row">
       <div class="col-6 text-center" style="margin-top: 150px">
@@ -44,31 +45,40 @@
         <h5 style="font-weight: 700; margin-top: 10px; margin-bottom: 40px">
           Open source web developer site.
         </h5>
-        <button class="btn btn-primary">Learn from Basics</button>
-        <a href="#carrer-path" class="link-carrier">Don't know where to begin?</a>
+        <button style="margin-bottom: 20px;" class="btn btn-primary">Learn from Basics</button>
+        <div class="operas">
+        <a href="#carrier-path" class="link-carrier text-center">Don't know where to begin?</a>
       </div>
+      </div>
+      
       <div class="col text-center">
         <img src="images/website.png" width="90%" alt="" />
       </div>
     </div>
   </div>
-
-
-  <div id="html-section" class="carrier-path text-center html-section">
+<div class="forms" style="margin-top: -150px;">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#3a3950" fill-opacity="1" d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+</div>
+  <div id="carrier-path" class="carrier-path text-center html-section">
     <h1>Don't know where to begin?</h1>
-    <h3 style="color: rgb(245, 245, 245);">Start your carrier</h3>
+    <h6 style="color: rgb(245, 245, 245); margin-top: 10px; margin-bottom: 10px;">To be a web developer, start learning this subjects below</h6>
     <div class="container text-center start">
       <div class="row">
-        <div class="col align-self-center space-carrier text-center justify-content-center" style="background-color: #81d1ff; height: auto;">
-          <h3 style="font-size: 50px; font-weight: bold;">HTML <h6 style="font-size: 33px;">Hypertext Markup Language
-          </h5></h3>
+        <div class="col align-self-center space-carrier text-center justify-content-center"
+          style="background-color: #81d1ff; height: auto;">
+          <h3 style="font-size: 50px; font-weight: bold;">HTML <h6 style="font-size: 30px; padding: 10px; color: rgb(75, 75, 75);">
+              Hypertext Markup Language
+              </h5>
+          </h3>
         </div>
-        <div class="col space-carrier text-center" style="background-color: #ffffff; height: 150px;">
+        <div class="col space-carrier text-center" style="background-color: #ffffff; height: auto;">
 
           <h5 style="text-align: left; padding: 15px;">
             1. Create your first webpage.
           </h5>
-          <p style="color: black; text-align: left; margin-left: 20px;">First Let's Learn HTML, which is the standard language for creating webpages.</p>
+          <p style="color: black; text-align: left; margin-left: 20px;">First Let's Learn HTML, which is the standard
+            language for creating webpages.</p>
+          <button class="btn btn-primary">Learn HTML</button>
         </div>
 
       </div>
@@ -76,16 +86,21 @@
 
     <div class="container text-center start">
       <div class="row">
-        <div class="col align-self-center space-carrier text-center justify-content-center" style="background-color: #9cff99; height: auto;">
-          <h3 style="font-size: 50px; font-weight: bold;">CSS <h6 style="font-size: 33px;">Cascading Style Sheets
-          </h5></h3>
+        <div class="col align-self-center space-carrier text-center justify-content-center"
+          style="background-color: #9cff99; height: auto;">
+          <h3 style="font-size: 50px; font-weight: bold;">CSS <h6 style="font-size: 30px; padding: 10px;  color: rgb(75, 75, 75);">
+              Cascading Style Sheets
+              </h5>
+          </h3>
         </div>
-        <div class="col space-carrier text-center" style="background-color: #ffffff; height: 150px;">
+        <div class="col space-carrier text-center" style="background-color: #ffffff; height: auto;">
 
           <h5 style="text-align: left; padding: 15px;">
-             2. Style your web page.
+            2. Style your web page.
           </h5>
-          <p style="color: black; text-align: left; margin-left: 20px;">First Let's Learn HTML, which is the standard language for creating webpages.</p>
+          <p style="color: black; text-align: left; margin-left: 20px;">Next let's learn CSS, to design the webpage with
+            beautiful colors, font, and many more. </p>
+          <button class="btn btn-primary">Learn CSS</button>
         </div>
 
       </div>
@@ -94,21 +109,25 @@
 
     <div class="container text-center start">
       <div class="row">
-        <div class="col align-self-center space-carrier text-center justify-content-center" style="background-color: #f0e000; height: auto;">
+        <div class="col align-self-center space-carrier text-center justify-content-center"
+          style="background-color: #f0e000; height: auto;">
           <h3 style="font-size: 50px; font-weight: bold;">JavaScript</h3>
         </div>
-        <div class="col space-carrier text-center" style="background-color: #ffffff; height: 150px;">
+        <div class="col space-carrier text-center" style="background-color: #ffffff; height: auto;">
 
           <h5 style="text-align: left; padding: 15px;">
             3. Design your webpage more attractive.
           </h5>
+          <p style="color: black; text-align: left; margin-left: 20px;">Next learn JavaScript to create interactive
+            webpages.</p>
+          <button class="btn btn-primary">Learn JavaScript</button>
         </div>
 
       </div>
     </div>
 
   </div>
- 
+
 
 
 
