--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="#contact">Contact</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#about">About</a>
+        </li>
+        
       </ul>
     </div>
   </nav>
@@ -47,26 +48,32 @@
         </h5>
         <button style="margin-bottom: 20px;" class="btn btn-primary">Learn from Basics</button>
         <div class="operas">
-        <a href="#carrier-path" class="link-carrier text-center">Don't know where to begin?</a>
+          <a href="#carrier-path" class="link-carrier text-center">Don't know where to begin?</a>
+        </div>
       </div>
-      </div>
-      
-      <div class="col text-center">
-        <img src="images/website.png" width="90%" alt="" />
+
+      <div class="col text-center img-tag">
+        <img src="images/code-img.png" width="90%" alt="" />
       </div>
     </div>
   </div>
-<div class="forms" style="margin-top: -150px;">
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#3a3950" fill-opacity="1" d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-</div>
+  <div class="forms" style="margin-top: -150px;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#3a3950" fill-opacity="1"
+        d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+      </path>
+    </svg>
+  </div>
   <div id="carrier-path" class="carrier-path text-center html-section">
     <h1>Don't know where to begin?</h1>
-    <h6 style="color: rgb(245, 245, 245); margin-top: 10px; margin-bottom: 10px;">To be a web developer, start learning this subjects below</h6>
+    <h6 style="color: rgb(245, 245, 245); margin-top: 10px; margin-bottom: 10px;">To be a web developer, start learning
+      this subjects below</h6>
     <div class="container text-center start">
       <div class="row">
         <div class="col align-self-center space-carrier text-center justify-content-center"
           style="background-color: #81d1ff; height: auto;">
-          <h3 style="font-size: 50px; font-weight: bold;">HTML <h6 style="font-size: 30px; padding: 10px; color: rgb(75, 75, 75);">
+          <h3 style="font-size: 50px; font-weight: bold;">HTML <h6
+              style="font-size: 30px; padding: 10px; color: rgb(75, 75, 75);">
               Hypertext Markup Language
               </h5>
           </h3>
@@ -78,7 +85,7 @@
           </h5>
           <p style="color: black; text-align: left; margin-left: 20px;">First Let's Learn HTML, which is the standard
             language for creating webpages.</p>
-          <button class="btn btn-primary">Learn HTML</button>
+          <button class="btn btn-primary start-btn" style="margin-left: 20px;">Learn HTML</button>
         </div>
 
       </div>
@@ -88,7 +95,8 @@
       <div class="row">
         <div class="col align-self-center space-carrier text-center justify-content-center"
           style="background-color: #9cff99; height: auto;">
-          <h3 style="font-size: 50px; font-weight: bold;">CSS <h6 style="font-size: 30px; padding: 10px;  color: rgb(75, 75, 75);">
+          <h3 style="font-size: 50px; font-weight: bold;">CSS <h6
+              style="font-size: 30px; padding: 10px;  color: rgb(75, 75, 75);">
               Cascading Style Sheets
               </h5>
           </h3>
@@ -100,7 +108,7 @@
           </h5>
           <p style="color: black; text-align: left; margin-left: 20px;">Next let's learn CSS, to design the webpage with
             beautiful colors, font, and many more. </p>
-          <button class="btn btn-primary">Learn CSS</button>
+          <button class="btn btn-primary start-btn" style="margin-left: 20px;">Learn CSS</button>
         </div>
 
       </div>
@@ -120,7 +128,7 @@
           </h5>
           <p style="color: black; text-align: left; margin-left: 20px;">Next learn JavaScript to create interactive
             webpages.</p>
-          <button class="btn btn-primary">Learn JavaScript</button>
+          <button class="btn btn-primary start-btn" style="margin-left: 20px;">Learn JavaScript</button>
         </div>
 
       </div>
@@ -132,8 +140,8 @@
 
 
   <!-- contact page liyanna -->
-  <div id="contact">
-    <h1 class="container text-center" style="margin-bottom: 50px;">Contact</h1>
+  <div id="contact" class="contact">
+    <h1 class="container text-center " style="margin-bottom: 50px; color: white; padding-top: 30px;">Contact Us</h1>
 
 
     <div class="container text-center">
@@ -165,23 +173,19 @@
             </div>
           </div>
         </div>
-        <div class="col" style="text-align: left;">
+        <div class="col bg-contact-form" style="text-align: left;">
           <p class="text-center" style="font-size: 30px">
             Have any questions? Just let us know
           </p>
           <form>
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required placeholder="Enter Email Address">
+              <div id="emailHelp" style="color: black;" class="form-text">We'll never share your email with anyone else.</div>
             </div>
             <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+              <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Enter your message"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
@@ -193,10 +197,28 @@
 
   <!-- About section -->
 
-  <div id="about" class="container">
-    <h2 style="font-weight: bold; text-align: center;">About Us</h2>
-    <img src="" alt="">
-    <h2></h2>
+  <div id="about" class="about-page">
+    <h1 style="font-weight: bold; text-align: center;">About Us</h1>
+    <div class="container text-center">
+      <div class="row justify-content-center">
+        <div class="devlopers-card">
+          <img src="images/" alt="profile"
+            style="width: 100%; border-radius: 100%; border: 1px solid black;">
+          <h4>Rakindu Marambe</h4>
+        </div>
+        <div class="devlopers-card">
+          <img src="images/profile.jpg" alt="profile"
+            style="width: 100%; border-radius: 100%; border: 1px solid black;">
+          <h4>Malisha Perera</h4>
+        </div>
+        <div class="devlopers-card">
+          <img src="images/" alt="profile"
+            style="width: 100%; border-radius: 100%; border: 1px solid black;">
+          <h4>Damith Thilanga</h4>
+        </div>
+      </div>
+    </div>
+    <h4 class="text-center"><strong>Professional Developers</strong></h4>
 
   </div>
 
