--- a/index.html
+++ b/index.html
@@ -198,27 +198,27 @@
   <!-- About section -->
 
   <div id="about" class="about-page">
-    <h1 style="font-weight: bold; text-align: center;">About Us</h1>
+    <h1 style="font-weight: bold; text-align: center; color: white; margin-bottom: 20px;">About Us</h1>
     <div class="container text-center">
       <div class="row justify-content-center">
         <div class="devlopers-card">
-          <img src="images/" alt="profile"
-            style="width: 100%; border-radius: 100%; border: 1px solid black;">
+          <img src="images/profile.jpg" alt="profile"
+            style="width: 70%; border-radius: 100%; margin-top: 10px; margin-bottom: 20px; border: 1px solid black;">
           <h4>Rakindu Marambe</h4>
         </div>
         <div class="devlopers-card">
           <img src="images/profile.jpg" alt="profile"
-            style="width: 100%; border-radius: 100%; border: 1px solid black;">
+            style="width: 70%; border-radius: 100%; margin-top: 10px; margin-bottom: 20px; border: 1px solid black;">
           <h4>Malisha Perera</h4>
         </div>
         <div class="devlopers-card">
-          <img src="images/" alt="profile"
-            style="width: 100%; border-radius: 100%; border: 1px solid black;">
+          <img src="images/profile.jpg" alt="profile"
+            style="width: 70%; border-radius: 100%; margin-top: 10px; margin-bottom: 20px; border: 1px solid black;">
           <h4>Damith Thilanga</h4>
         </div>
       </div>
     </div>
-    <h4 class="text-center"><strong>Professional Developers</strong></h4>
+    <h4 class="text-center" style="margin-top: 30px; margin-bottom: 40px;"><strong>Professional Developers</strong></h4>
 
   </div>
 
