--- a/index.html
+++ b/index.html
@@ -202,17 +202,17 @@
     <div class="container text-center">
       <div class="row justify-content-center">
         <div class="devlopers-card">
-          <img src="images/profile.jpg" alt="profile"
+          <img src="images/" alt="profile"
             style="width: 70%; border-radius: 100%; margin-top: 10px; margin-bottom: 20px; border: 1px solid black;">
           <h4>Rakindu Marambe</h4>
         </div>
         <div class="devlopers-card">
-          <img src="images/profile.jpg" alt="profile"
+          <img src="images/2.jpg" alt="profile"
             style="width: 70%; border-radius: 100%; margin-top: 10px; margin-bottom: 20px; border: 1px solid black;">
           <h4>Malisha Perera</h4>
         </div>
         <div class="devlopers-card">
-          <img src="images/profile.jpg" alt="profile"
+          <img src="images/" alt="profile"
             style="width: 70%; border-radius: 100%; margin-top: 10px; margin-bottom: 20px; border: 1px solid black;">
           <h4>Damith Thilanga</h4>
         </div>
