--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </nav>
 
-  <div class="container">
+  <div class="container bg-text ">
     <div class="row">
       <div class="col-6 text-center" style="margin-top: 150px">
         <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif">
@@ -52,11 +52,13 @@
         </div>
       </div>
 
-      <div class="col text-center img-tag">
+      <div class="col text-center img-tag ">
         <img src="images/code-img.png" width="90%" alt="" />
       </div>
     </div>
   </div>
+
+
   <div class="forms" style="margin-top: -150px;">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#3a3950" fill-opacity="1"
@@ -64,6 +66,9 @@
       </path>
     </svg>
   </div>
+
+
+
   <div id="carrier-path" class="carrier-path text-center html-section">
     <h1>Don't know where to begin?</h1>
     <h6 style="color: rgb(245, 245, 245); margin-top: 10px; margin-bottom: 10px;">To be a web developer, start learning
