--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li class="nav-item">
           <a class="nav-link" href="#about">About</a>
         </li>
-        
+
       </ul>
     </div>
   </nav>
@@ -185,12 +185,15 @@
           <form>
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required placeholder="Enter Email Address">
-              <div id="emailHelp" style="color: black;" class="form-text">We'll never share your email with anyone else.</div>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required
+                placeholder="Enter Email Address">
+              <div id="emailHelp" style="color: black;" class="form-text">We'll never share your email with anyone else.
+              </div>
             </div>
             <div class="mb-3">
               <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Enter your message"></textarea>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                placeholder="Enter your message"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
