--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="style.css" />
+  <script src="https://kit.fontawesome.com/068002c87e.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -90,7 +91,7 @@
           </h5>
           <p style="color: black; text-align: left; margin-left: 20px;">First Let's Learn HTML, which is the standard
             language for creating webpages.</p>
-          <button class="btn btn-primary start-btn" style="margin-left: 20px;">Learn HTML</button>
+          <button class="btn btn-primary start-btn" style="margin-left: 20px;" onclick="window.location.href='html.html'">Learn HTML</button>
         </div>
 
       </div>
@@ -113,7 +114,7 @@
           </h5>
           <p style="color: black; text-align: left; margin-left: 20px;">Next let's learn CSS, to design the webpage with
             beautiful colors, font, and many more. </p>
-          <button class="btn btn-primary start-btn" style="margin-left: 20px;">Learn CSS</button>
+          <button class="btn btn-primary start-btn" style="margin-left: 20px;" onclick="window.location.href='css.html'">Learn CSS</button>
         </div>
 
       </div>
@@ -133,7 +134,7 @@
           </h5>
           <p style="color: black; text-align: left; margin-left: 20px;">Next learn JavaScript to create interactive
             webpages.</p>
-          <button class="btn btn-primary start-btn" style="margin-left: 20px;">Learn JavaScript</button>
+          <button class="btn btn-primary start-btn" style="margin-left: 20px;" onclick="window.location.href='javascript.html'">Learn JavaScript</button>
         </div>
 
       </div>
@@ -151,32 +152,10 @@
 
     <div class="container text-center">
       <div class="row">
-        <div class="col-6 text-center">
-          <div class="mapouter">
-            <div class="gmap_canvas"><iframe width="100%" height="500" id="gmap_canvas"
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31700.051304374414!2d80.03869218567795!3d6.707877761748423!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae24b0d361bfd6b%3A0x3d9f0f43da6c7a47!2sTaxila%20Central%20College!5e0!3m2!1sen!2sus!4v1666861830883!5m2!1sen!2sus"
-                frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
-                href="https://fmovies-online.net">fmovies</a><br>
-              <style>
-                .mapouter {
-                  position: relative;
-                  text-align: right;
-                  height: 500px;
-                  width: 100%;
-
-                }
-              </style><a href="https://www.embedgooglemap.net">embedgooglemap.net</a>
-              <style>
-                .gmap_canvas {
-                  overflow: hidden;
-                  background: none !important;
-                  height: 400px;
-                  width: 100%;
-                  border-radius: 20px;
-                }
-              </style>
-            </div>
-          </div>
+        <div class="col text-center bg-contact-form-r">
+          <h1 style="margin-top: 40px;margin-bottom: 50px; color: blue;">Get in touch.</h1>
+          <h4 class="smlar" style="text-align: left; margin-top: 20px;"><i class="fa-solid fa-envelope"></i> &nbsp; techmixstudio.dev@gmail.com</h4><br>
+          <h4 class="smlar" style="text-align: left; "><i class="fa-solid fa-phone"></i> &nbsp; +94 78 860 5824</h4>
         </div>
         <div class="col bg-contact-form" style="text-align: left;">
           <p class="text-center" style="font-size: 30px">
