--- a/html.html
+++ b/html.html
@@ -19,7 +19,24 @@
 </head>
 
 <body>
-
+    <nav class="navbar bg-light">
+        <div class="container-fluid">
+          <span class="navbar-brand mb-0 h1"><img src="images/logo.png" width="150px" alt="" /></span>
+          <ul class="nav justify-content-end">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+    
+          </ul>
+        </div>
+      </nav>
+      
 </body>
 
 </html>
