--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     </div>
   </nav>
 
-  <div class="container bg-text ">
+  <div class="container bg-text text-center ">
     <div class="row">
-      <div class="col-6 text-center" style="margin-top: 150px">
+      <div class="col text-center img-tag">
         <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif">
           Free code Learning.
         </h1>
@@ -53,21 +53,16 @@
         </div>
       </div>
 
-      <div class="col text-center img-tag ">
-        <img src="images/code-img.png" width="90%" alt="" />
+      <div class="col text-center img-tag">
+        <img class="coding-img " src="images/code-img.png" alt="" />
       </div>
     </div>
   </div>
 
 
-  <div class="forms" style="margin-top: -150px;">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path fill="#3a3950" fill-opacity="1"
-        d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
-      </path>
-    </svg>
+  <div class="forms" style="margin-top: -100px;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#3a3950" fill-opacity="1" d="M0,192L48,197.3C96,203,192,213,288,213.3C384,213,480,203,576,192C672,181,768,171,864,176C960,181,1056,203,1152,213.3C1248,224,1344,224,1392,224L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>  </div>
   </div>
-
 
 
   <div id="carrier-path" class="carrier-path text-center html-section">
@@ -199,8 +194,8 @@
           <h4>Malisha Perera</h4>
         </div>
         <div class="devlopers-card">
-          <img src="images/" alt="profile"
-            style="width: 70%; border-radius: 100%; margin-top: 10px; margin-bottom: 20px; border: 1px solid black;">
+          <img src="images/3.jpg" alt="profile"
+            style="width: 65%; border-radius: 100%; margin-top: 10px; margin-bottom: 20px; border: 1px solid black;">
           <h4>Damith Thilanga</h4>
         </div>
       </div>
