--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <div class="container text-center">
       <div class="row justify-content-center">
         <div class="devlopers-card">
-          <img src="images/" alt="profile"
+          <img src="images/1.jpg" alt="profile"
             style="width: 70%; border-radius: 100%; margin-top: 10px; margin-bottom: 20px; border: 1px solid black;">
           <h4>Rakindu Marambe</h4>
         </div>
@@ -201,8 +201,14 @@
       </div>
     </div>
     <h4 class="text-center" style="margin-top: 30px; margin-bottom: 40px;"><strong>Professional Developers</strong></h4>
-
   </div>
+
+  <div class="container bg-about">
+  <div class="col text-center">
+    <h1 style="margin-top: 20px; margin-bottom: 30px;">About Learn3Code</h1>
+    <strong>Learn3Code team provide you an opportunity to learn programming languages for free. </strong>
+  </div>
+</div>
 
   <footer style="background-color: black; color: white" class="text-center">
     <p>Copyright - &copy; 2022 Learn3Code</p>
