--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
   <div class="container bg-about">
   <div class="col text-center">
     <h1 style="margin-top: 20px; margin-bottom: 30px;">About Learn3Code</h1>
-    <strong>Learn3Code team provide you an opportunity to learn programming languages for free. </strong>
+    <strong>Learn3Code team provides you to learn programming languages for free. Learn all languages to be a Full Stack Web Developer.</strong>
   </div>
 </div>
 
