--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       this subjects below</h6>
     <div class="container text-center start">
       <div class="row">
-        <div class="col align-self-center space-carrier text-center justify-content-center"
+        <div class="col align-self-center space-carrier text-center justify-content-center carrier-hover"
           style="background-color: #81d1ff; height: auto;">
           <h3 style="font-size: 50px; font-weight: bold;">HTML <h6
               style="font-size: 30px; padding: 10px; color: rgb(75, 75, 75);">
@@ -94,7 +94,7 @@
 
     <div class="container text-center start">
       <div class="row">
-        <div class="col align-self-center space-carrier text-center justify-content-center"
+        <div class="col align-self-center space-carrier text-center justify-content-center carrier-hover"
           style="background-color: #9cff99; height: auto;">
           <h3 style="font-size: 50px; font-weight: bold;">CSS <h6
               style="font-size: 30px; padding: 10px;  color: rgb(75, 75, 75);">
@@ -118,7 +118,7 @@
 
     <div class="container text-center start">
       <div class="row">
-        <div class="col align-self-center space-carrier text-center justify-content-center"
+        <div class="col align-self-center space-carrier text-center justify-content-center carrier-hover"
           style="background-color: #f0e000; height: auto;">
           <h3 style="font-size: 50px; font-weight: bold;">JavaScript</h3>
         </div>
