--- a/javascript.html
+++ b/javascript.html
@@ -56,7 +56,7 @@
           <div class="col-8">
                 <h1>What is Javascript?</h1>
                 <li>Js stands for JavaScript</li>
-                <li>JavaScript is the world's most popular programming language.</li>
+                <li>JavaScript is the most popular programming language in the world.</li>
                 <li>This tutorial will teach you JavaScript from basic to advanced.</li>
                 <li>JavaScript is used to program the behavior of web pages</li>
                 <pre class="gr5 text-center" id="myInput" >
@@ -65,7 +65,7 @@
                   
                 </pre>
                 <div class="text-left" style="margin-top: -30px;">
-                  <button onclick="run()" class="btn btn-primary" style="margin-top: -100px;"> Run code</button>
+                  <button onclick="run()" class="btn btn-primary" style="margin-top: -100px;">Run code</button>
                 </div>
             </div>
             
