--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="style.css" />
   <script src="https://kit.fontawesome.com/068002c87e.js" crossorigin="anonymous"></script>
-
+<script src="main.js"></script>
 </head>
 
 <body>
@@ -213,6 +213,60 @@
   <footer style="background-color: black; color: white" class="text-center">
     <p>Copyright - &copy; 2022 Learn3Code</p>
   </footer>
+
+
+
+
+  <script>
+    const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+    const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+  </script>
+
+  <script>
+    function copyFunction() {
+      const copyText = document.getElementById("myInput").textContent;
+      const textArea = document.createElement('textarea');
+      textArea.textContent = copyText;
+      document.body.append(textArea);
+      textArea.select();
+      document.execCommand("copy");
+    }
+    function copyFunctionA() {
+      const copyText = document.getElementById("copycodetoA").textContent;
+      const textArea = document.createElement('textarea');
+      textArea.textContent = copyText;
+      document.body.append(textArea);
+      textArea.select();
+      document.execCommand("copy");
+    }
+    function copyFunctionB() {
+      const copyText = document.getElementById("copycodetoB").textContent;
+      const textArea = document.createElement('textarea');
+      textArea.textContent = copyText;
+      document.body.append(textArea);
+      textArea.select();
+      document.execCommand("copy");
+    }
+
+    document.getElementById('button').addEventListener('click', copyFunction);
+    document.getElementById('buttonA').addEventListener('click', copyFunctionA);
+    document.getElementById('buttonB').addEventListener('click', copyFunctionB);
+
+    function copytext() {
+      document.getElementById("button").innerHTML = "Copied" + '&nbsp;' + ' <i style="color: #fff;" class="fa-solid fa-check"></i>';
+
+    }
+
+    function copytextA() {
+      document.getElementById("buttonA").innerHTML = "Copied" + '&nbsp;' + ' <i style="color: #fff;" class="fa-solid fa-check"></i>';
+
+    }
+
+    function copytextB() {
+      document.getElementById("buttonB").innerHTML = "Copied" + '&nbsp;' + ' <i style="color: #fff;" class="fa-solid fa-check"></i>';
+
+    }
+  </script>
 </body>
 
 </html>
